# wifi-sniffer-visualization

./: CMakeLists.txt  README  requirements.txt  setting.py
backend/db/: dbconn.py
demo/: screenshoot.mkv
sniffer/: a  sniff.cpp
src/: a  sniff.cpp
web/: views.py
web/templates/: jquery.html
wifispy/: mac.list  manu.py  requirements.txt  wifispy.py
